<resources>
    <string name="github_client_id">3c273fbcbc9f47ebb67a</string>
    <string name="github_client_secret">b576aa46edf9cc8515b6e14e5dcce6041b3042fe</string>

    <string name="app_name">GitKakaoBot</string>
    <string name="copyright">© 2020 SungBin</string>
    <string name="saved">저장되었습니다.</string>

    <string name="need_permission_use_service">앱 사용 시 필요한 권한이에요.</string>
    <string name="need_login_use_service">앱을 이용하기 위해선 로그인이 필요해요.</string>
    <string name="_continue">계속하기 →</string>
    <string name="login">로그인 →</string>
    <string name="login_with_arrow">로그인 →</string>
    <string name="password">비밀번호</string>
    <string name="id">아이디</string>
    <string name="hello">안녕하세요!</string>
    <string name="need_setting">시작하기 앞서,\n몇 가지 기본 설정이 필요해요.</string>
    <string name="set_permission">권한설정</string>
    <string name="join_storage_permission">저장소 접근 권한</string>
    <string name="join_give_permission">권한 허용하기</string>
    <string name="join_reason_for_storage_permission">소스코드 저장을 위해 해당 권한이 필요해요.</string>
    <string name="join_read_notification_permission">알림 읽기 권한</string>
    <string name="join_reason_for_read_notification_permission">카카오톡 알림을 감지하기 위해 필요해요.</string>
    <string name="bot">봇</string>
    <string name="show_all">전체보기</string>
    <string name="bot_log">로그</string>
    <string name="bot_database">데이터베이스</string>
    <string name="bot_sandbox">샌드박스</string>
    <string name="bot_setting">설정</string>
    <string name="script_name_preview">Script Name</string>
    <string name="script_content_preview">Script Content</string>
    <string name="view">View</string>
    <string name="database_size_preview">0.98 MB</string>
    <string name="remove">Remove</string>
    <string name="saerch">Search</string>
    <string name="bots">Bots</string>
    <string name="bot_bot_name">봇 이름</string>
    <string name="bot_bot_add">봇 추가</string>
    <string name="added_new_bot">새로운 봇이 추가되었습니다.</string>
    <string name="name">이름</string>
    <string name="description">설명</string>
    <string name="source">소스</string>
    <string name="share">공유</string>
    <string name="add_bot_none">추가된 봇이 없어요\n첫번째 봇을 만들어 보세요.</string>
    <string name="add_log_none">생성된 로그가 없어요\n첫번째 로그를 작성해 보세요.</string>
    <string name="add_database_none">생성된 데이터베이스가 없어요\n첫번째 데이터베이스를\n생성해 보세요</string>
    <string name="auto_complete">자동\n왼성</string>
    <string name="redo_done">앞으로 되돌리기</string>
    <string name="undo_done">전으로 되돌리기</string>
    <string name="indent">안쪽 들여쓰기</string>
    <string name="editor">에디터</string>
    <string name="search_kr">검색</string>
    <string name="replace">바꾸기</string>
    <string name="setting_kr">설정</string>
    <string name="highlighting">하이라이팅</string>
    <string name="other">기타</string>
    <string name="save">저장</string>
    <string name="power_on">Power On</string>
    <string name="power_off">Power Off</string>
    <string name="cant_load_session">메세지를 전송할 방의 세션을 가져오지 못했습니다.</string>
    <string name="script_file_gone">스크립트 파일이 존재하지 않습니다.</string>
    <string name="reload_script_first">{name} 스크립트 리로드를 먼저 해 주세요</string>
    <string name="reload">리로드</string>

    <string name="preview_sender">preview sender</string>
    <string name="preview_message">preview message</string>
    <string name="input">Input…</string>
    <string name="send">전송</string>
    <string name="last_runtime">마지막작동: @time</string>
    <string name="bot_reload_done">리로드 성공\n걸린 시간 : %d ms</string>
    <string name="mode_eval">eval 모드</string>
    <string name="log_time_preview">14:24:42</string>
    <string name="login_success">로그인 성공!</string>
    <string name="group_chatting">그룹 채팅</string>
    <string name="open_chatting">오픈 채팅</string>
    <string name="add_chatting_room">채팅방 추가</string>
    <string name="click_image_and_change">이미지를 클릭하여 변경</string>
    <string name="please_input_script_version">스크립트 버전을 입력해 주세요.</string>
    <string name="setting_script_editor">자바스크립트 에디터 설정</string>
    <string name="auto_save_script_editing">스크립트 편집중 자동저장</string>
    <string name="off_source_highlight">소스코드 하이라이팅 끄기</string>
    <string name="off_script_error_highlight">실시간 오류 하이라이팅 끄기</string>
    <string name="size_source_code">소스코드 글자 크기</string>
    <string name="size_source_default">(기본값: 17sp)</string>
    <string name="preview_text_size">텍스트 크기 미리보기</string>
    <string name="default_size">17</string>
    <string name="setting_script_working">스크립트 동작 설정</string>
    <string name="script_error_bot_off">작동중 오류 발생시 봇 종료</string>
    <string name="setting_working_package">작동할 패키지명 설정</string>
    <string name="check_enter">(엔터로 구분)</string>
    <string name="default_package_kakao">기본값) com.kakao.talk</string>
    <string name="select_app">어플 선택</string>
    <string name="limit_timeout">HTML 파싱 시간 제한</string>
    <string name="default_limit_timeout">(기본값: 5초 / 단위: 초)</string>
    <string name="number_five">5</string>
    <string name="setting_black_list">블랙리스트 설정</string>
    <string name="black_list_all_mute">블랙리스트로 설정된건 모든 스크립트에서 무시합니다.</string>
    <string name="room_black_list">방 블랙리스트</string>
    <string name="user_black_list">사용자 블랙리스트</string>
    <string name="setting_etc">기타 설정</string>
    <string name="show_ad">개발자를 돕는 광고 보기</string>
    <string name="remove_ad">광고 영구 제거</string>
    <string name="choose_fav_langauage">선호 언어 선택</string>
    <string name="bot_javscript">자바스크립트</string>
    <string name="bot_simple_reply">간편 지동응답</string>
    <string name="choose_bot_type">봇 방식을 선택해 주세요.</string>
    <string name="reply_message">답장할 메시지</string>
    <string name="required_input">필수 입력</string>
    <string name="choose_input">선택 사항</string>
    <string name="room_name">방 이름</string>
    <string name="debug_room_name">디버그 방 이름</string>
    <string name="sender_name">보낸사람 이름</string>
    <string name="room_type">채팅방 타입</string>
    <string name="solo_room">개인 채팅방</string>
    <string name="open_room">오픈/그룹 채팅방</string>
    <string name="setting_done">설정 완료</string>
    <string name="listen_message">반응할 메시지</string>
    <string name="setting_main">메인 설정</string>
    <string name="bot_working">봇 작동</string>
    <string name="kakaotalk_bot">카카오톡 봇</string>
    <string name="now_bot_working">봇 작동중…</string>
    <string name="now_bot_stop">현재 봇이 꺼져있습니다.</string>
    <string name="bot_off">봇 종료</string>
    <string name="reloading">리로드중…</string>
    <string name="opensource_license">오픈소스 라이선스</string>
    <string name="bot_work_stop">봇 작동이 중지됩니다.</string>
    <string name="bot_work_start">봇 작동이 시작됩니다.</string>
    <string name="bot_start">봇 시작</string>
    <string name="close">닫기</string>
    <string name="bot_reload">리로드</string>
    <string name="input_app_name">앱 이름 입력</string>
    <string name="load_app_list">설치된 앱 목록을 불러오고 있습니다…\n잠시만 기다려 주세요.</string>
    <string name="thanks">감사합니다! :)</string>
    <string name="can_set_one_thirty">1에서 30 까지 설정 가능합니다.</string>
    <string name="can_set_one_ten">1에서 10 까지 설정 가능합니다.</string>
    <string name="codeedit_auto_saved">자동저장 되었습니다.</string>
    <string name="copied_clipboard">클립보드에 복사되었습니다.</string>
    <string name="reload_error_keep_scope">리로드 실패시 기존 스코프 유지</string>
    <string name="need_app_update">앱 업데이트 필요</string>
    <string name="add_sender">사용자 추가</string>
    <string name="input_sender">사용자 이름 입력</string>
    <string name="input_done">입력 완료</string>
    <string name="not_base64_image">올바른 Base64 이미지가 아닙니다.</string>
    <string name="bot_added_done">추가 완료</string>
    <string name="input_sender_name">사용자 이름을 입력해 주세요.</string>
    <string name="input_room_name">방 이름을 입력해 주세요.</string>
    <string name="icon_add_sender">͏[͏͏͏+͏͏͏]͏ 사͏͏͏͏͏͏용͏͏자͏ ͏͏͏͏͏͏추͏가͏</string>
    <string name="icon_room_sender">͏[͏͏͏+͏͏͏]͏ ͏͏͏͏방͏͏͏͏͏͏͏ ͏͏͏͏͏͏추͏가͏</string>
    <string name="sender">sender</string>
    <string name="room">room</string>
    <string name="eval_room">[☆] EVAL ROOM</string>
    <string name="default_bot_name">[ BOT ]</string>
    <string name="swipe_screen_left_to_right">화면을 왼쪽에서 오른쪽으로 밀어보세요!</string>
    <string name="add_debug_room">방 추가</string>
    <string name="select_sender_profile">사용자 프로필사진 선택</string>
    <string name="select_image">이미지 선택</string>
    <string name="input_base64">Base64 입력</string>
    <string name="codeedit_experimental_function">실험적 기능</string>
    <string name="sandbox_experimental_function_description">센드박스는 실험적인 기능입니다.\n때때로 의도한대로 작동하지 않을 수 있습니다.\n양해 부탁드립니다.</string>
    <string name="codeedit_editor_experimental_function_description">스크립트 에디터에 실험적인 기능이 있습니다.\n때때로 의도한대로 작동하지 않을 수 있습니다.\n양해 부탁드립니다.\n\n또한 에디터에서 작성중인 내용이 저장되지 않을 수 있습니다.\n즉 내용을 수시로 복사하여 백업해두시는걸 추천드립니다.(저장시 자동 복사)</string>
    <string name="find_content">찾을 내용</string>
    <string name="ignore_upper">대소문자 무시</string>
    <string name="find_none">결과 없음</string>
    <string name="default_user">사용자0</string>
    <string name="expand">펼치기</string>
    <string name="wrong_json">올바른 json이 아닙니다.</string>
    <string name="json_edit_developing">Json 편집은 개발중…</string>
    <string name="long_press_remove_database">길게 눌러서 데이터베이스 삭제</string>
    <string name="removed_database">{name} 데이터베이스가 삭제되었습니다.</string>
    <string name="danger">위험</string>
    <string name="content_none">표시할 항목이 없어요</string>
    <string name="next">다음</string>
    <string name="input_bot_source">봇 소스 입력…</string>
    <string name="bot_default_sourcecode"><![CDATA[let response = (room, msg, sender, isGroupChat, replier, ImageDB, packageName) => {\n\n}\n\nBotManager.on(Event.MESSAGE, response);]]></string>
    <string name="join_welcome">환영합니다!</string>
    <string name="join_require_setting">시작하기 앞서,\n몇가지 설정이 필요해요.</string>
    <string name="permission_grant">권한 부여됨</string>
    <string name="join_start_with_github_login">깃허브 로그인으로 시작하기</string>
    <string name="loading">불러오는중…</string>
    <string name="bot_empty_bot">추가된 봇이 없어요 😢\n봇을 새로 추가해보세요!</string>
    <string name="bot_edit">수정</string>
    <string name="menu">메뉴</string>
    <string name="editor_tool">에디터 도구</string>
    <string name="make_pretty">코드 예쁘게 만들기</string>
    <string name="make_minify">코드 최소한 줄이기</string>
    <string name="javascript_beautify">JavaScript Beautify</string>
    <string name="run">run</string>
    <string name="javascript_console">자바스크립트 콘솔</string>
    <string name="debug_hint">여기에 디버그 내용이 표시됩니다.\n(console.log를 통해 디버그를 기록할 수 있습니다)</string>
    <string name="default_console_code"><![CDATA[let debug = (value) => {\n  console.log(value);\n}\n\nlet error = (name, exception) => {\n  console.log(exception);\n}\n\nBotManager.addListener(Event.DEBUG, debug);\nBotManager.addListener(Event.ERROR, error);]]></string>
    <string name="search">검색</string>
    <string name="base64_tool">Base64 도구</string>
    <string name="base64_preview">Base64 미리보기</string>
    <string name="base64_encode">Base64 인코딩</string>
    <string name="bot_please_input_script_name">스크립트 이름을 입력해 주세요.</string>

</resources>
